syntax = "proto3";

package noble.cctp.v1;

import "gogoproto/gogo.proto";
import "noble/cctp/v1/attester.proto";
import "noble/cctp/v1/burning_and_minting_paused.proto";
import "noble/cctp/v1/max_message_body_size.proto";
import "noble/cctp/v1/nonce.proto";
import "noble/cctp/v1/per_message_burn_limit.proto";
import "noble/cctp/v1/remote_token_messenger.proto";
import "noble/cctp/v1/sending_and_receiving_messages_paused.proto";
import "noble/cctp/v1/signature_threshold.proto";
import "noble/cctp/v1/token_pair.proto";

option go_package = "github.com/strangelove-ventures/noble/x/cctp/types";

// GenesisState defines the cctp module's genesis state.
message GenesisState {
  reserved 1;
  reserved "params";

  string owner = 2;
  string attester_manager = 3;
  string pauser = 4;
  string token_controller = 5;

  repeated Attester attester_list = 6 [(gogoproto.nullable) = false];
  repeated PerMessageBurnLimit per_message_burn_limit_list = 7 [(gogoproto.nullable) = false];
  BurningAndMintingPaused burning_and_minting_paused = 8;
  SendingAndReceivingMessagesPaused sending_and_receiving_messages_paused = 9;
  MaxMessageBodySize max_message_body_size = 10;
  Nonce next_available_nonce = 11;
  SignatureThreshold signature_threshold = 12;
  repeated TokenPair token_pair_list = 13 [(gogoproto.nullable) = false];
  repeated Nonce used_nonces_list = 14 [(gogoproto.nullable) = false];
  repeated RemoteTokenMessenger token_messenger_list = 15 [(gogoproto.nullable) = false];
}
