syntax = "proto3";

package noble.cctp.v1;

option go_package = "github.com/strangelove-ventures/noble/x/cctp/types";

/**
 * The Nonce type functions both to mark receipt of received messages and a counter for sending messages
 * @param source_domain the domain id, used to mark used nonces for received messages
 * @param nonce the nonce number
 */
message Nonce {
  uint32 source_domain = 1;
  uint64 nonce = 2;
}
