syntax = "proto3";

package noble.cctp.v1;

option go_package = "github.com/strangelove-ventures/noble/x/cctp/types";

/**
 * TODO rename to RemoteTokenMessenger everywhere
 * @param domain_id
 * @param address
 */
message TokenMessenger {
  uint32 domain_id = 1;
  string address = 2;
}
